manifests/basic-app-probes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: basic-app-deployment
  labels:
    app.kubernetes.io/name: basic-app
    app: basic-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: basic-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: basic-app
        app: basic-app
    spec:
      serviceAccountName: basic-app-sa
      containers:
      - name: basic-app
        image: docker.io/jorgecastello/basic-microservice:temurin
        imagePullPolicy: Always
        resources:
          requests:
            memory: "64Mi"
            cpu: "300m"
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
          - name: http-port
            containerPort: 8080
        livenessProbe:
          httpGet:
            path: /actuator/health/livenessState
            port: http-port
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /actuator/health/readinessState
            port: http-port
          initialDelaySeconds: 10
          periodSeconds: 10
