manifests/basic-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: api
spec:
  to:
    kind: Service
    name: basic-service
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
